fix(style): collapse の上下にマージンが入るように修正

--- a/static/style.css
+++ b/static/style.css
@@ -31,3 +31,8 @@ details summary:hover {
   cursor: pointer;
   opacity: 0.8;
 }
+
+/* spacing */
+.ymargin {
+  margin: 16px 0px 20px;
+}
